--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "owd-theme-gnome",
+  "version": "0.0.1",
   "description": "Open Web Desktop theme",
   "homepage": "https://github.com/hacklover/owd-theme-gnome#readme",
   "bugs": {
