--- a/package.json
+++ b/package.json
@@ -2,27 +2,17 @@
   "name": "owd-theme-gnome",
   "version": "0.0.1",
   "description": "Open Web Desktop theme",
-  "homepage": "https://github.com/hacklover/owd-theme-gnome#readme",
+  "homepage": "https://github.com/owdproject/owd-theme-gnome#readme",
   "bugs": {
-    "url": "https://github.com/hacklover/owd-theme-gnome/issues"
+    "url": "https://github.com/owdproject/owd-theme-gnome/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hacklover/owd-theme-gnome.git"
+    "url": "git+https://github.com/owdproject/owd-theme-gnome.git"
   },
-  "license": "GPL-3.0",
+  "license": "MIT",
   "author": {
-    "name": "hacklover",
-    "url": "https://github.com/hacklover"
-  },
-  "dependencies": {
-    "@fontsource/cantarell": "^4.4.5",
-    "@fontsource/jetbrains-mono": "^4.4.5",
-    "@fontsource/oswald": "^4.4.5"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.22",
-    "ts-jest": "^26.5.5",
-    "jest": "^26.6.3"
+    "name": "dxlliv",
+    "url": "https://github.com/dxlliv"
   }
 }
