feat: Rewrite theme for OWD 2.0.0-beta.5

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "author": {
     "name": "dxlliv",
     "url": "https://github.com/dxlliv"
+  },
+  "dependencies": {
+    "vue3-carousel": "^0.1.30"
   }
 }
