--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "owd-theme-gnome",
-  "version": "0.0.1",
+  "version": "3.0.0-alpha.0",
   "description": "Open Web Desktop theme",
   "homepage": "https://github.com/owdproject/owd-theme-gnome#readme",
   "bugs": {
