--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "owd-theme-gnome",
-  "version": "3.0.0-alpha.0",
+  "name": "@owdproject/theme-gnome",
+  "version": "0.0.1",
   "description": "Open Web Desktop theme",
   "homepage": "https://github.com/owdproject/theme-gnome#readme",
   "bugs": {
@@ -11,6 +11,10 @@
     "url": "git+https://github.com/owdproject/theme-gnome.git"
   },
   "license": "MIT",
+  "author": {
+    "name": "dxlliv",
+    "url": "https://github.com/dxlliv"
+  },
   "dependencies": {
     "vue3-carousel": "^0.15.0",
     "html2canvas": "^1.4.1"
